--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,12 @@
 }
 
 .App-header {
-  background-color: #516e62;
+  background-color: #e1e1e1;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
